# BLJ2023SiBra

./: .gitignore  README.md
C++/2024/KW27/zork/: CMakeLists.txt
C++/2024/KW27/zork/src/: game.cpp  game.h  inventory.cpp  inventory.h  item.cpp  item.h  location.cpp  location.h  main.cpp
C/2023/KW37/Aufgaben/: 2.c  3.c  4.c  5.c
C/2023/KW37/GuessoNumero/: GuessoNumero.drawio  main  main.c
C/2023/KW37/scacchi/: main1  main1.c
C/2023/KW37/scacchi/.vscode.old/: launch.json  tasks.json
C/2023/KW38/Aufgaben/: Funktionen.c  Schaltjahr.c
C/2023/KW38/IncludeFiles/: main.c  other_file.c  other_file.h
C/2023/KW39/BubbleSort/: main.c
C/2023/KW39/MarkCalculator/: main.c
C/2023/KW43/2DArrays/: main.c
C/2023/KW43/HTMLGenerator/: index.html  main.c
C/2023/KW43/LightsOut/: main.c
C/2023/KW43/LightsOut/src/: main.c
C/2023/KW44/Aufg/src/: main.c
C/2023/KW44/Memory Allocation/src/: main.c
C/2023/KW44/Personenmanager/: AufgabePersonenManager.txt
C/2023/KW44/Personenmanager/src/: main.c  person.h
C/2023/KW44/Random Numbers/: AufgabeRandomNumbers.txt
C/2023/KW44/Random Numbers/src/: main.c
C/2023/KW45/SlidingPuzzle/src/: main.c
C/2023/KW46/DoublyLinkedList/src/: linkedlist.c  linkedlist.h  main.c
C/2023/KW46/LinkedList/src/: linkedlist.c  linkedlist.h  main.c
Embedded/2023/KW46/HelloWorld/: platformio.ini
Embedded/2023/KW46/HelloWorld/src/: main.cpp
Embedded/2023/KW50/Experiment/: platformio.ini
Embedded/2023/KW50/Experiment/src/: conn.cpp  conn.h  main.cpp
Embedded/2023/KW50/OLEDDisplay/: platformio.ini
Embedded/2023/KW50/OLEDDisplay/src/: main.cpp
Java/2023/KW47/Aquarium/src/: App.java  Aquarium.java  Fish.java  FishTypes.java
Java/2023/KW47/ChristmasTree/src/: App.java  TreeRenderer.java
Java/2023/KW47/HelloWorld/src/: App.java  Cat.java  Dog.java
Java/2023/KW47/PersonManager/: .gitignore
Java/2023/KW47/PersonManager/src/: App.java  PeopleStore.java  Person.java
Java/2023/KW48/Baumstammvolumen/src/: App.java
Java/2023/KW48/MorseCode/src/: App.java  Morse.java
Java/2023/KW48/PINCodes/src/: App.java
Java/2023/KW48/Palindrome/src/: App.java
Java/2023/KW48/Stoffwechselrate/src/: App.java
Java/2023/KW48/SumOfSequence/src/: App.java
Java/2024/KW02/game-of-life/src/: Preset.java  Simulation.java  Starter.java  (+1 more)
Java/2024/KW10/MediaCollection/: README.md
Java/2024/KW12/VehicleRental/: README.md
Java/2024/KW23/sokoban/: README.md  pom.xml
Rust/2024/KW16/img2text/: Cargo.toml
TypeScript/2024/KW02/TextAnalyzer/: README.md  bun.lockb  package.json
TypeScript/2024/KW20/cookie-clicker/: bun.lockb  package.json
TypeScript/2024/KW20/module-list/: bun.lockb  package.json
TypeScript/2024/KW20/my-app/: bun.lockb  package.json
TypeScript/2024/KW21/react-uebungen/: bun.lockb  package.json
TypeScript/2024/KW22/stationboard/: bun.lockb  index.html  package.json
Web/2023/KW40/00_NOTmyfirstsite/: index.html
Web/2023/KW40/arbeitsjournal/: index.html  style.css
Web/2023/KW40/bistro/: index.html
Web/2023/KW40/probezeitberichform/: index.html
(+117 files in other folders)
